# tray-rs

./: .gitignore  Cargo.toml  notes.org
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
tray/: Cargo.toml
tray/src/: lib.rs
tray/src/platform/: mod.rs
tray/src/platform/win32/: mod.rs
